src/objects/copado__Selenium_Group_Org_Credential__c.object
<CustomObject>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Selenium Group Credentials</relationshipLabel>
        <relationshipName>Selenium_Group_Org_Credentials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Group__c</fullName>
        <label>Selenium Test Group</label>
        <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
        <relationshipName>Selenium_Group_Org_Credentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Selenium Group Credential</label>
    <nameField>
        <displayFormat>TGOC-{00000}</displayFormat>
        <label>Selenium Group Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Group Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>copado__Environment_Match</fullName>
        <active>true</active>
        <description>If the Selenium Test Group has an Environment, the Environment of the Org Credential must match the Group&apos;s Environment.</description>
        <errorConditionFormula>IF ( AND( NOT( ISBLANK(  copado__Selenium_Test_Group__r.copado__Environment__c ) ) , copado__Selenium_Test_Group__r.copado__Environment__c !=  copado__Org_Credential__r.copado__Environment__c), true, false  )</errorConditionFormula>
        <errorMessage>The Selenium Test Group Environment must equal the Org Credential Environment.</errorMessage>
    </validationRules>
</CustomObject>